nginx-bio-prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-bio-prod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-bio-prod
  sessionAffinity: None
  type: ClusterIP
